--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -47,6 +48,16 @@
     <img class="errou" src="errou.png" alt="" />
   </div>
     
+  <div class="tela-final" style="display:none;">
+    <img class="final" src="final.png" alt="">
+     <div class="texto-final">
+      VOCÊ CONCLUIU O QUIZ!!
+      :D
+    </div>
+    <button class="voltar">
+      Voltar ao início
+    </button>
+  </div>
     
   <script src="logica.js"></script>
 </body>
